--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -79,6 +79,23 @@ h5 {
     margin-bottom:30px;
 }
 
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create two equal columns that sits next to each other */
+  .column {
+    flex: 50%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+  }
+
 .fragment-two {
     background-color: #fff9f1;
     color: #f84a12;
@@ -116,7 +133,7 @@ h5 {
 }
 
 .fragment-three .carousel-caption {
-    color: #999
+    color: rgba(49, 162, 244, 0.609)
 }
 
 .fragment-three .custom-indicator {
@@ -195,3 +212,161 @@ h5 {
     margin: 10px 0;
     font-size: 0.8rem;
 }
+html, body {
+    font-family: 'Lato', sans-serif;
+  }
+  
+
+  
+  .custom-card {
+    transform: translateY(-150px);
+    text-align: center;
+    width:500px;
+    max-width: 90%;
+    margin: 0 auto;
+    
+  }
+  
+  .card {
+    border-radius: 0;
+    box-shadow:0 8px 17px 2px rgba(152,152,152,0.14),0 3px 14px 2px rgba(152,152,152,0.12),0 5px 5px -3px rgba(152,152,152,0.2);
+  }
+  
+  .education-container {
+    padding: 60px 0;
+  }
+  
+  .education-item {
+    padding: 20px 0;
+  }
+  
+  .container-color, .container-dark {
+    padding: 100px 0;
+    color: rgba(243, 243, 243, 0.863);
+  }
+  
+  .container-color {
+    background-color: #27476e;
+  }
+  
+  .container-dark {
+    background-color: #5abbd8;
+  }
+  
+  .card-title {
+    margin-top: 50px;
+    color: #328eff;
+    text-align: center;
+  }
+  
+  .card-text {
+    line-height: 2;
+  }
+  
+  .card-icon{
+    color: #328eff;
+    font-size: 50px;
+  }
+  
+  .subtitle {
+      font-weight: 200;
+  }
+  .boy {
+      display: block;
+      height: 200px;
+      margin-top: 50px;
+  }
+  
+  .start-project-card {
+      min-height: 200px;
+      width: 100%;
+  }
+  
+  .card-flex{
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      flex-direction: column;
+  }
+  
+  .social-icon {
+      color: rgb(0, 0, 0);
+      font-size: 36px;
+      margin-right: 40px;
+  }
+  
+  .skill-container{
+      padding: 30px;
+  }
+  
+  .fa-align {
+    margin: auto;
+    color: #fff;
+  } 
+  
+
+  
+  .modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+  }
+  
+  .modal-dialog {
+    position: fixed;
+    margin: 0;
+    min-width: 100%;
+    height: 100%;
+    padding: 0;
+  }
+  
+  .modal-content {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    border-radius: 0;
+    box-shadow: none;
+  }
+  
+  .modal-header {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 50px;
+    padding: 10px;
+    background: #328eff;
+    border: 0;
+    border-radius: 0;
+  }
+  
+  .modal-title {
+    font-weight: 300;
+    font-size: 2em;
+    color: #fff;
+    line-height: 30px;
+  }
+  
+  .modal-body {
+    position: absolute;
+    top: 50px;
+    bottom: 60px;
+    width: 100%;
+    font-weight: 300;
+    overflow: auto;
+  }
+  
+  .modal-footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 60px;
+    padding: 10px;
+    background: #f1f3f5;
+  }
